<resources>
    <string name="app_name">RideHailing</string>
    <!-- login -->
    <string name="login_title">登录</string>
    <string name="login_account">账号</string>
    <string name="login_input_account">请输入账号</string>
    <string name="login_password">密码</string>
    <string name="login_input_password">请输入密码</string>
    <!-- index -->
    <string name="index_title">综合信息</string>
    <string name="index_owner_manage">车主管理</string>
    <string name="index_car_manage">车辆管理</string>
    <string name="index_owner_info">车主信息</string>
    <string name="index_car_info">车辆信息</string>
    <!-- menus_manager -->
    <string name="menu_add">添加信息</string>
    <string name="menu_delete">删除信息</string>
    <string name="menu_change">修改信息</string>
    <!-- menus_carInfo -->
    <string name="menu_more">更多信息</string>
    <!-- carInfo -->
    <string name="carInfo_title">车辆信息</string>
    <string name="carInfo_transport">道路运输证号</string>
    <string name="carInfo_address">地址</string>
    <string name="carInfo_plate">车牌号码</string>
    <string name="carInfo_vehicleModel">车辆型号</string>
    <string name="carInfo_seat">座位数</string>
    <string name="carInfo_color">车身颜色</string>
    <string name="carInfo_size">车辆尺寸</string>
    <string name="carInfo_businessScope">经营范围</string>
    <string name="carInfo_operationStatus">运营状态</string>
    <string name="carInfo_issuingAuthority">发证机关</string>
    <!-- ownerInfo -->
    <string name="ownerInfo_title">车主信息</string>
    <string name="ownerInfo_name">姓名</string>
    <string name="ownerInfo_sex">性别</string>
    <string name="ownerInfo_birth">出生日期</string>
    <string name="ownerInfo_country">国籍</string>
    <string name="ownerInfo_address">住址</string>
    <string name="ownerInfo_licenseNum">驾驶证号</string>
    <string name="ownerInfo_drivingModels">准驾车型</string>
    <string name="ownerInfo_plate">车牌号码</string>
    <string name="ownerInfo_validPeriod">证件有效期</string>
    <string name="ownerInfo_initialDate">初始领证日期：</string>
    <string name="ownerInfo_effectiveDate">有效起始日期：</string>
    <!-- searchOwner -->
    <string name="searchOwner_title">查询车主信息</string>
    <string name="searchOwner_licenseNum">请输入驾驶证号</string>
    <string name="searchOwner_plate">请输入车牌号</string>
    <string name="searchOwner_search">查询</string>
    <!-- searchCar -->
    <string name="searchCar_title">查询车辆信息</string>
    <string name="searchCar_plate">请输入车牌号</string>
    <string name="searchCar_transport">请输入道路运输证号</string>
    <string name="searchCar_search">查询</string>
    <!-- moreCarInfo -->
    <string name="more_title">更多信息</string>
    <string name="more_violationRecords">违章记录</string>
    <string name="more_currentItinerary">当前行程</string>
    <string name="more_illegalSubmit">违法提交</string>
    <!-- record -->
    <string name="record_number">违法次数</string>
    <string name="record_fine">罚款</string>
    <string name="record_dealWith">是否处理</string>
    <string name="record_noResult">恭喜你，没有违法记录</string>
    <!-- stroke -->
    <string name="stroke_title">当前行程</string>
    <string name="stroke_vehicleModel">车辆型号</string>
    <string name="stroke_ownerName">车主姓名</string>
    <string name="stroke_start">起点</string>
    <string name="stroke_end">终点</string>
</resources>