<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/index_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:src="@mipmap/icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/teal_700"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_owner_manage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/index_owner_manage"
                android:textSize="18dp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tv_car_manage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/index_car_manage"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/teal_700"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_owner_info"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/index_owner_info"
                android:textSize="18dp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tv_car_info"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/index_car_info"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>