<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/more_title"
        android:titleTextColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_more_plate"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="豫AG931C"
            android:textColor="@color/black"
            android:textSize="42dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_200" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_more_violationRecords"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="20dp"
            android:text="@string/more_violationRecords"
            android:textColor="@color/purple_700"
            android:textSize="28dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/teal_700" />

        <TextView
            android:id="@+id/tv_more_currentItinerary"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/more_currentItinerary"
            android:textColor="@color/purple_700"
            android:textSize="28dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/teal_700" />

        <TextView
            android:id="@+id/tv_more_illegalSubmit"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/more_illegalSubmit"
            android:textColor="@color/purple_700"
            android:textSize="28dp"
            android:textStyle="normal" />

    </LinearLayout>

</LinearLayout>