<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/login_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="600px"
            android:layout_height="500px"
            android:src="@mipmap/icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="网约车执法"
            android:textSize="32dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_account"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/edtTxt_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/login_input_account"
            android:singleLine="true"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_account"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/edtTxt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/login_input_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/purple_500"
            android:text="@string/login_title"
            android:textSize="24dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>