<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/searchCar_title"
        android:titleTextColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:src="@mipmap/icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtTxt_searchCar_transport"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:hint="@string/searchCar_transport"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btn_searchCar1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@color/purple_500"
            android:text="@string/searchCar_title"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtTxt_searchCar_plate"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:hint="@string/searchCar_plate"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btn_searchCar2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@color/purple_500"
            android:text="@string/searchCar_title"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>